# knight-quest

backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  env  eslint.config.js  main.py  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
backend/app/: __init__.py  __main__.py  settings.py
backend/app/models/: __init__.py  save.py  user.py
backend/app/repositories/: __init__.py  repository.py
backend/app/routers/: authentication.py  saves.py  users.py
backend/app/schemas/: auth.py  base.py  response.py
backend/app/utils/: auth_providers.py  database.py  dependencies.py  factory.py  http.py  jwt.py  logging.py
backend/migrations/: env.py
backend/migrations/versions/: 5427ab796e74_init.py  6b9f4b6ab037_init.py  902a48e67295_init.py
backend/prisma/: schema.prisma
backend/src/: index.ts  server.ts
backend/src/controllers/: auth.ts  certificate.ts  index.ts  save.ts
backend/src/middlewares/: authenticate.ts  error.ts  index.ts  permit.ts  request-logger.ts  request.ts  response.ts
backend/src/routes/: certificate.ts  health.ts  index.ts
backend/src/routes/auth/: login.ts  register.ts
backend/src/routes/auth/google/: callback.ts  index.ts
backend/src/routes/save/: index.ts
backend/src/schemas/: auth.ts  save.ts
backend/src/types/: express.d.ts  save.ts
backend/src/utils/: certificate.ts  database.ts  env.ts  hashing.ts  jwt.ts  logging.ts  response.ts
backend/src/utils/database/: client.ts  index.ts
backend/src/utils/database/extensions/: global.ts  index.ts  user.ts
backend/src/utils/oauth/: google.ts
knight-quest/: .gitignore  Knight Quest.apk.idsig  Knight Quest.csproj  README.md  (+7 more)
(+1243 files in other folders)
