[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["dev-laww <lawrenceallen.tech@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.12"}
uvicorn = "^0.34.3"
pyhumps = "^3.8.0"
pydantic-settings = "^2.9.1"
itsdangerous = "^2.2.0"
authlib = "^1.6.3"
pyjwt = "^2.10.1"
sqlmodel = "^0.0.24"
alembic = "^1.16.5"
asyncpg = "^0.30.0"
greenlet = "^3.2.4"
psycopg2-binary = "^2.9.10"
fastapi-utils = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
